--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -419,6 +419,7 @@
       <pre *ngSwitchCase="'build'">ng build --prod</pre>
   </div>
 
+  <app-button></app-button>
   <!-- Links -->
   <div class="card-container">
     <a class="circle-link" title="Animations" href="https://angular.io/guide/animations" target="_blank" rel="noopener">
